2001-09-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_function):  'Last_created' is now
	a stack; fixes Wall of Lights bug where Batlin's serpent jaw was
	missing.

	* actors.cc,flags.h:  Polymorph flagged moved to where Usecode
	checks for it (bit 32 of regular flags).

	* actors.cc (public): Enumerate shapes to call 'readied' Usecode
	on for SI.
	* actors.cc: Check for weapon frame being out of range.

	* drag.cc: Pass MOVE_WALK instead of MOVE_FLY.  Fixes bug where
	things get dropped into walls, and (hopefully!) doesn't break anything.

2001-09-26  Ryan Nunn <triforce@merlin.net.au>
	* actorio.cc, actors.h, cheat_screen.cc, gumps/Book_gump.*, 
	  gumps/Scroll_gump.* gumps/Sign_gump.*, gumps/Text_gump.*,
	  objs/flags.h, usecode/intrinsics.cc :
	  Implimented Serpentine Signs, books and scrolls. Also Implimented
	  Serpent Isle 'read' flag. Can also be enabled in BG by using cheats.
	* gumps/Gump.cc, gumps/Gump.h : Added method to center a gump on sreen
	  after it's already been created.
	* shapes/font.cc, shapes/font.h, shapes/fontvga.cc : Changes to use 
	  Serpentine fonts in SI.
	* msvcstuff/msvc_kludges.h, usecode/ucdisasm.cc : Change to compile
	  with MSVC
	* gumps/Text_button.h, exultmenu.h : Only allow headers to be included
	  once.

2001-09-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_internal): ADDSV prints '0' now;
	fixes SI money-counting with abacus.
	* actorio.cc (Actor): Casting from unsigned char to int loses the
	sign, which is relevant for health and foodlevel.

2001-09-26  Dancer Vesperman  <dancer@users.sourceforge.net>

	* usecode/ucxt/src/ucfunc.cc: prevent overruns
	* keys.cc: Streamline keybinder. Fix crashes.

2001-09-25  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,flags.h,etc:  Flag 4 = 'dead'.  Removed separate
	'dead' flag.

2001-09-25  Dancer Vesperman  <dancer@users.sourceforge.net>

	* sigame.cc: Use a std::string instead of a fixed-length buffer